fixed spacing bug at top of about page

--- a/style.css
+++ b/style.css
@@ -3032,6 +3032,7 @@ table.tg.oversize-pricing-table{
 
 	.header-area .about-feature-area {
 	    padding: 10px;
+		padding-top: 30px;
 	}
 	.about-feature-area {
 		padding: 10px;
